Fixed requests and reponses
